Use 2 SQLServer instances

--- a/NsbRouterPlayground.AdazzleUpdater/NsbRouterPlayground.AdazzleUpdater.csproj
+++ b/NsbRouterPlayground.AdazzleUpdater/NsbRouterPlayground.AdazzleUpdater.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Infrastructure\**" />
+    <EmbeddedResource Remove="Infrastructure\**" />
+    <None Remove="Infrastructure\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="appsettings.json" />
   </ItemGroup>
 
@@ -23,10 +29,6 @@
     <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.0.0" />
     <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.2.0" />
     <PackageReference Include="NServiceBus.Persistence.Sql" Version="4.6.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Infrastructure\" />
   </ItemGroup>
 
   <ItemGroup>
