--- a/NsbRouterPlayground.AdazzleUpdater/appsettings.json
+++ b/NsbRouterPlayground.AdazzleUpdater/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "Nsb": "Server=(localdb)\\MSSqlLocalDb;Initial Catalog=NsbRouterPlayground.Nsb;Integrated Security=True;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=True;Application Name=NsbRouterPlayground Adazzle Adapter"
+    "Nsb": "Server=.\\SQLExpress;Initial Catalog=NsbRouterPlayground_Nsb;Integrated Security=True;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=True;Application Name=NsbRouterPlayground Adazzle Adapter"
   }
 }
