--- a/NsbRouterPlayground.Router/NsbRouterPlayground.Router.csproj
+++ b/NsbRouterPlayground.Router/NsbRouterPlayground.Router.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;net472</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,8 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NServiceBus" Version="7.3.0" />
-    <PackageReference Include="NServiceBus.Router" Version="3.8.0" />
+    <PackageReference Include="NServiceBus" Version="7.4.3" />
+    <PackageReference Include="NServiceBus.Router" Version="3.8.1" />
     <PackageReference Include="NServiceBus.SqlServer" Version="5.0.2" />
     <PackageReference Include="NServiceBus.Persistence.Sql" Version="4.6.1" />
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="4.7.0" />
