--- a/NsbRouterPlayground.Router/appsettings.json
+++ b/NsbRouterPlayground.Router/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "WebApi": "Server=(localdb)\\MSSqlLocalDb;Initial Catalog=NsbRouterPlayground.Business;Integrated Security=True;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=True;Application Name=NsbRouterPlayground Router",
-    "Nsb": "Server=(localdb)\\MSSqlLocalDb;Initial Catalog=NsbRouterPlayground.Nsb;Integrated Security=True;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=True;Application Name=NsbRouterPlayground Router"
+    "WebApi": "Server=(localdb)\\MSSqlLocalDb;Initial Catalog=NsbRouterPlayground_Business;Integrated Security=True;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=True;Application Name=NsbRouterPlayground Router",
+    "Nsb": "Server=.\\SQLExpress;Initial Catalog=NsbRouterPlayground_Nsb;Integrated Security=True;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=True;Application Name=NsbRouterPlayground Router"
   }
 }
