--- a/NsbRouterPlayground.WebApi/NsbRouterPlayground.WebApi.csproj
+++ b/NsbRouterPlayground.WebApi/NsbRouterPlayground.WebApi.csproj
@@ -5,17 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Infrastructure\**" />
+    <Content Remove="Infrastructure\**" />
+    <EmbeddedResource Remove="Infrastructure\**" />
+    <None Remove="Infrastructure\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="NServiceBus" Version="7.3.0" />
     <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.0.1" />
     <PackageReference Include="NServiceBus.SqlServer" Version="5.0.2" />
     <PackageReference Include="NServiceBus.Persistence.Sql" Version="4.6.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Infrastructure\" />
-    <Folder Include="Infrastructure\IoC" />
-    <Folder Include="Infrastructure\IoC\Installers" />
   </ItemGroup>
 
   <ItemGroup>
