--- a/NsbRouterPlayground.WebApi/appsettings.json
+++ b/NsbRouterPlayground.WebApi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApi": "Server=(localdb)\\MSSqlLocalDb;Initial Catalog=NsbRouterPlayground.Business;Integrated Security=True;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=True;Application Name=NsbRouterPlayground Router",
+    "WebApi": "Server=(localdb)\\MSSqlLocalDb;Initial Catalog=NsbRouterPlayground_Business;Integrated Security=True;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=True;Application Name=NsbRouterPlayground Router",
   }
 }
