- Kill most projects - Rename `NsbRouterPlayground.Integration.Messages.csproj`

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,4 @@
-
-[*.cs]
-indent_style=space
-indent_size=3
-tab_width=4
-
 [*]
-
 # Microsoft .NET properties
 csharp_indent_braces=false
 csharp_new_line_before_open_brace=control_blocks
@@ -14,3 +7,8 @@ csharp_new_line_before_open_brace=control_blocks
 resharper_blank_lines_before_control_transfer_statements=1
 resharper_csharp_indent_size=3
 resharper_other_braces=end_of_line
+
+[*.{cs,csproj,xml}]
+indent_style=space
+indent_size=2
+tab_width=2
