Fix database name in connection string

--- a/NsbRouterPlayground.Receiver/appsettings.json
+++ b/NsbRouterPlayground.Receiver/appsettings.json
@@ -8,6 +8,6 @@
         }
     },
     "ConnectionStrings": {
-        "Data": "Server=(localdb)\\MSSqlLocalDb;Initial Catalog=NsbRouterPlayground.OrderProcessor;Integrated Security=true;Application Name=NsbRouterPlayground"
+        "Data": "Server=(localdb)\\MSSqlLocalDb;Initial Catalog=NsbRouterPlayground.Receiver;Integrated Security=true;Application Name=NsbRouterPlayground"
     }
 }
