Add setup code for the router

--- a/NsbRouterPlayground.Bootstrap/NsbRouterPlayground.Bootstrap.csproj
+++ b/NsbRouterPlayground.Bootstrap/NsbRouterPlayground.Bootstrap.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="NServiceBus.Persistence.Sql" Version="6.6.*" />
+    <PackageReference Include="NServiceBus.Router.Connector" Version="3.9.*" />
   </ItemGroup>
 
   <ItemGroup>
